add image, description and steps

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,25 @@
     </head>
     <body>
         <h1>Lasagna recipe</h1>
+        <img src="../images/Classic-Lasagna-12-1536x951.jpg" alt="What your lasagna should looks like">
+        <h2>Description :</h2>
+        <ul>
+            <li>pasta</li>
+            <li>mincemeat</li>
+            <li>oignons</li>
+            <li>tomatoes</li>
+            <li>cheese</li>
+        </ul>
+        <p>Well it's pretty easy you cook the pasta in a pan and also cut some oignons before putting them in a frying pan with tomato sauce and mincemeat</p>
+        <p>Then you put the stuff nicely and bake it, idk I never made lasagna, but you should be getting them nice lasagna as a result, congrats :D</p>
+        <h2>Steps</h2>
+        <ol>
+            <li>Cook pasta</li>
+            <li>Cook mincemeat to make the tomato sauce</li>
+            <li>Put it all together</li>
+            <li>Add cheese on top</li>
+            <li>Put it in the oven and let it bake</li>
+            <li>Here's your good looking food, have a good one !</li>
+        </ol>
     </body>
 </html>
