--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Odin Recipes</h1>
         <a href="./recipes/lasagna.html">Lasagna recipe</a>
         <a href="./recipes/pizza.html">Pizza recipe</a>
+        <a href="./recipes/noodle.html">Noodles recipe</a>
     </body>
 </html>
