--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna recipe</a>
-        <a href="./recipes/pizza.html">Pizza recipe</a>
-        <a href="./recipes/noodle.html">Noodles recipe</a>
+        <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna recipe</a></li>
+        <li><a href="./recipes/pizza.html">Pizza recipe</a></li>
+        <li><a href="./recipes/noodle.html">Noodles recipe</a></li></ul>
     </body>
 </html>
