--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Lasagna recipe</h1>
-        <img src="../images/Classic-Lasagna-12-1536x951.jpg" alt="What your lasagna should looks like">
+        <img src="../images/Classic-Lasagna-12-1536x951.jpg" width="500" alt="This is what you should get">
         <h2>Description :</h2>
         <ul>
             <li>pasta</li>
