--- a/recipes/noodle.html
+++ b/recipes/noodle.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Ramen recipe</h1>
-        <img src="../images/Shoyu_Ramen.jpg">
+        <img src="../images/Shoyu_Ramen.jpg" width="500" alt="This is what you should get">
         <h2>Description</h2>
         <ul>
             <li>a pan</li>
