--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Pizza recipe</h1>
-        <img src="../images/Pepperoni_pizza.jpeg">
+        <img src="../images/Pepperoni_pizza.jpeg" width="500" alt="This is what you should get">
         <h2>Description</h2>
         <ul>
             <li>flour</li>
